updates for solution tutorial

--- a/app/src/main/res/layout/chat_item_watson.xml
+++ b/app/src/main/res/layout/chat_item_watson.xml
@@ -12,6 +12,7 @@
 
     <TextView
         android:id="@+id/message"
+        android:autoLink="web"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
