--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -3,10 +3,10 @@
 
     <!--Watson Assistant service credentials-->
     <!-- REPLACE `ASSISTANT_ID_HERE` with ID of the Assistant to use -->
-    <string name="assistant_id">ab43e921-8e12-4600-8830-6e045effcc80</string>
+    <string name="assistant_id"></string>
 
     <!-- REPLACE `ASSISTANT_API_KEY_HERE` with Watson Assistant service API Key-->
-    <string name="assistant_apikey">LHeUadm5kbKLIjASwELTsc_bKi2gmfPoOyjUolnAFmqR</string>
+    <string name="assistant_apikey"></string>
 
     <!-- REPLACE `ASSISTANT_URL_HERE` with Watson Assistant service URL-->
     <string name="assistant_url">https://gateway.watsonplatform.net/assistant/api</string>
@@ -14,7 +14,7 @@
 
     <!--Watson Speech To Text(STT) service credentials-->
     <!-- REPLACE `STT_API_KEY_HERE` with Watson Speech to Text service API Key-->
-    <string name="STT_apikey">_xoZUcdCr5lne4woBUbGqa3hfITZMaIHJUv8gYSNfz0c</string>
+    <string name="STT_apikey"></string>
 
     <!-- REPLACE `STT_URL_HERE` with Watson Speech to Text service URL-->
     <string name="STT_url">https://stream.watsonplatform.net/speech-to-text/api</string>
@@ -22,7 +22,7 @@
 
     <!--Watson Text To Speech(TTS) service credentials-->
     <!-- REPLACE `TTS_API_KEY_HERE` with Watson Text to Speech service API Key-->
-    <string name="TTS_apikey">zVT9yVLp9jsvovS-9PQEjsnWJdp_7O03LmvnyHl37bwX</string>
+    <string name="TTS_apikey"></string>
 
     <!-- REPLACE `TTS_URL_HERE` with Watson Text to Speech service URL-->
     <string name="TTS_url">https://stream.watsonplatform.net/text-to-speech/api</string>
